--- a/IntLim/DESCRIPTION
+++ b/IntLim/DESCRIPTION
@@ -11,11 +11,11 @@ Description: This workflow takes normalized gene expression and metabolite level
   meta-information on genes, metabolites, and samples to identify gene:metabolite pairs 
   that are significantly associated with an outcome (e.g. tumors).
 License: GPL-2
-Depends: R (>= 3.3.0)
+Depends: R (>= 3.3.0), Biobase
 Imports:
     MultiDataSet,
-    Biobase,
-    methods
+    methods,
+    Biobase
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
