--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,7 @@ License: GPL-2
 Depends: R (>= 3.3.0), Biobase
 Imports:
     MultiDataSet,
-    methods,
-    Biobase
+    methods
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
