--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Depends: R (>= 3.3.0)
 Imports:
     Biobase,
     MultiDataSet,
-    methods
+    methods,
+    shiny
 Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 6.0.1
