--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,12 @@ Imports:
     Biobase,
     MultiDataSet,
     methods,
-    shiny
+    shiny,
+    magrittr,
+    highcharter,
+    RColorBrewer,
+    htmltools,
+    reshape2
 Suggests:
     knitr,
     rmarkdown
@@ -24,13 +29,14 @@ Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 6.0.1
 NeedsCompilation: no
-Collate:
+Collate: 
     'AllClasses.R'
     'MetaboliteSet_addMetabolite.R'
     'internalfunctions.R'
     '01_ReadData.R'
     '02_FilterData.R'
     'MultiDataSet_extendedfunctions.R'
+    'plottingfunctions.R'
     'runShiny.R'
     'statsfunctions.R'
 VignetteBuilder: knitr
