--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(FilterData)
 export(OutputStats)
 export(PlotDistributions)
 export(ReadData)
+export(RunIntLim)
 export(runIntLimApp)
 exportClasses(MetaboliteSet)
 import(magrittr)
