Implemented IntLimModel S4 class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(PlotDistributions)
 export(ReadData)
 export(RunIntLim)
 export(runIntLimApp)
+exportClasses(IntLimModel)
 exportClasses(MetaboliteSet)
 import(magrittr)
