--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(DistPvalues)
 export(FilterData)
 export(OutputStats)
 export(PlotDistributions)
+export(ProcessResults)
 export(ReadData)
 export(RunIntLim)
 export(runIntLimApp)
