--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
     htmltools,
     RColorBrewer,
     parallel,
-    BiocGenerics
+    BiocGenerics,
+    tidyr
 Suggests:
     knitr,
     rmarkdown
