--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ProcessResults)
 export(ReadData)
 export(RunIntLim)
 export(runIntLimApp)
+export(scatterPlot)
 export(scatterPlot2)
 exportClasses(IntLimResults)
 exportClasses(MetaboliteSet)
