Combine scatterplot functions and rename it.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,11 @@ export(DistPvalues)
 export(FilterData)
 export(OutputStats)
 export(PlotDistributions)
+export(PlotGMPair)
 export(ProcessResults)
 export(ReadData)
 export(RunIntLim)
 export(runIntLimApp)
-export(scatterPlot)
-export(scatterPlot2)
 exportClasses(IntLimResults)
 exportClasses(MetaboliteSet)
 import(highcharter)
