--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(PlotGMPair)
 export(ProcessResults)
 export(ReadData)
 export(RunIntLim)
-export(runIntLimApp)
+export(runIntLIMApp)
 exportClasses(IntLimResults)
 exportClasses(MetaboliteSet)
 import(highcharter)
