--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Depends: R (>= 3.2.0)
 Imports:
     shiny,
     shinydashboard,
+    rmarkdown,
     shinyFiles,
     Biobase,
     MultiDataSet,
@@ -28,8 +29,7 @@ Imports:
     BiocGenerics,
     tidyr
 Suggests:
-    knitr,
-    rmarkdown
+    knitr
 Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 6.0.1
