Implemented function to create PCA and updated vignette accordingly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(FilterData)
 export(OutputStats)
 export(PlotDistributions)
 export(PlotGMPair)
+export(PlotPCA)
 export(ProcessResults)
 export(ReadData)
 export(RunIntLim)
