--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,5 +13,6 @@ export(RunIntLim)
 export(runIntLIMApp)
 exportClasses(IntLimResults)
 exportClasses(MetaboliteSet)
+import(heatmaply)
 import(highcharter)
 import(magrittr)
