Created new function to create output table and created two output functions (that create output files)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,15 @@
 export(CorrHeatmap)
 export(DistPvalues)
 export(FilterData)
-export(OutputStats)
+export(OutputData)
+export(OutputResults)
 export(PlotDistributions)
 export(PlotGMPair)
 export(PlotPCA)
 export(ProcessResults)
 export(ReadData)
 export(RunIntLim)
+export(ShowStats)
 export(runIntLIMApp)
 exportClasses(IntLimResults)
 exportClasses(MetaboliteSet)
