Fixed bug in output results table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(ShowStats)
 export(runIntLIMApp)
 exportClasses(IntLimResults)
 exportClasses(MetaboliteSet)
+import(MultiDataSet)
 import(heatmaply)
 import(highcharter)
 import(magrittr)
