Changed ProcessResults() function which now adds a data frame of "filt.results". Added volcano plot function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ProcessResults)
 export(ReadData)
 export(RunIntLim)
 export(ShowStats)
+export(pvalCorrVolcano)
 export(runIntLIMApp)
 exportClasses(IntLimResults)
 exportClasses(MetaboliteSet)
