--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(ProcessResults)
 export(ReadData)
 export(RunIntLim)
 export(ShowStats)
+export(getGeneRes)
+export(getMetabRes)
 export(pvalCorrVolcano)
 export(runIntLIMApp)
 exportClasses(IntLimResults)
