Improved gene and metabolite list functions that interface with RaMP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,8 @@ export(ProcessResults)
 export(ReadData)
 export(RunIntLim)
 export(ShowStats)
-export(getGeneRes)
-export(getMetabRes)
+export(getGeneList)
+export(getMetabList)
 export(pvalCorrVolcano)
 export(runIntLIMApp)
 exportClasses(IntLimResults)
