test build with install_bioc_deps

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,7 +38,7 @@ environment:
 
 build_script:
   - travis-tool.sh github_package r-lib/remotes
-  - travis-tool.sh install_bioc Biobase MultiDataSet BiocGenerics GenomicRanges IRanges
+  - travis-tool.sh install_bioc_deps
   - travis-tool.sh install_deps
   - travis-tool.sh install_r htmltools httpuv evaluate
 
