BIOC_USE_DEVEL try syntax 'true' to 'TRUE'

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,12 +28,12 @@ environment:
 
   - R_VERSION: release
     R_ARCH: x64
-    BIOC_USE_DEVEL: false
+    BIOC_USE_DEVEL: FALSE
     _R_CHECK_FORCE_SUGGESTS_: false
 
   - R_VERSION: release
     R_ARCH: x64
-    BIOC_USE_DEVEL: true
+    BIOC_USE_DEVEL: TRUE
     _R_CHECK_FORCE_SUGGESTS_: false
 
 build_script:
