--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,7 +37,7 @@ environment:
     _R_CHECK_FORCE_SUGGESTS_: false
 
 build_script:
-  - travis-tool.sh github_package r-lib/remotes
+  - travis-tool.sh install_bioc Biobase MultiDataSet BiocGenerics GenomicRanges IRanges
   - travis-tool.sh install_bioc_deps
   - travis-tool.sh install_deps
   - travis-tool.sh install_r htmltools httpuv evaluate
