--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,23 +22,21 @@ environment:
 
   global:
     WARNINGS_ARE_ERRORS: 1
-    USE_RTOOLS: true
 
   matrix:
 
   - R_VERSION: release
     R_ARCH: x64
     BIOC_USE_DEVEL: FALSE
-    _R_CHECK_FORCE_SUGGESTS_: false
+    _R_CHECK_FORCE_SUGGESTS_: FALSE
 
   - R_VERSION: release
     R_ARCH: x64
     BIOC_USE_DEVEL: TRUE
-    _R_CHECK_FORCE_SUGGESTS_: false
+    _R_CHECK_FORCE_SUGGESTS_: FALSE
 
 build_script:
   - travis-tool.sh install_bioc Biobase MultiDataSet BiocGenerics GenomicRanges IRanges
-  - travis-tool.sh install_bioc_deps
   - travis-tool.sh install_deps
   - travis-tool.sh install_r htmltools httpuv evaluate
 
