Added two new functions for analysis of continuous data: 1.InteractionCoefficientGraph 2.ProcessResultsContinuous

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ export(CorrHeatmap_pdf)
 export(DistPvalues)
 export(FilterData)
 export(HistogramGMPairs)
+export(InteractionCoefficientGraph)
 export(OutputData)
 export(OutputResults)
 export(PlotDistributions)
 export(PlotGMPair)
 export(PlotPCA)
 export(ProcessResults)
+export(ProcessResultsContinuous)
 export(ReadData)
 export(RunIntLim)
 export(ShowStats)
