added creating marginal effects graph from one gene one metabolite

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,8 @@ Imports:
     DT,
     gplots,
     dendextend,
-    htmlwidgets
+    htmlwidgets,
+    margins
 Suggests:
     knitr
 Encoding: UTF-8
