--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(DistPvalues)
 export(FilterData)
 export(HistogramGMPairs)
 export(InteractionCoefficientGraph)
+export(MarginalEffectsGraph)
+export(MarginalEffectsGraphDataframe)
 export(OutputData)
 export(OutputResults)
 export(PlotDistributions)
